--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   share_plus: ^10.0.2
   flutter_svg: ^2.0.10+1
   collection: ^1.18.0
+  audioplayers: ^6.1.0
+  flutter_local_notifications: ^17.2.1
+  shared_preferences: ^2.3.2
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
