--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,26 +11,35 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
-  share_plus: ^10.0.2
   flutter_svg: ^2.0.10+1
   collection: ^1.18.0
-  audioplayers: ^6.1.0
+  audioplayers: ^6.0.0
   flutter_local_notifications: ^17.2.1
   shared_preferences: ^2.3.2
   flutter_animate: ^4.5.0
+  path_provider: ^2.1.3
+  share_plus: ^10.0.0
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/dua.png"
+
 flutter:
   uses-material-design: true
 
   assets:
     - assets/images/dua.png
-    - assets/data/                 # duas.json goes here
-    - assets/patterns/             # optional subtle background svgs
+    - assets/data/duas.json
+    - assets/patterns/pattern.webp
+    - assets/audio/
+    - assets/icons/dua.png
 
   fonts:
     - family: Amiri
